// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`textInput > should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23"
        for="_r_k_"
      >
        Test
      </label>
      <div>
        <div
          class="styles__q3q8048 styles_large__q3q8045"
          data-disabled="false"
          data-error="true"
          data-has-focus="false"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="true"
            class="styles__q3q8049"
            data-size="large"
            id="_r_k_"
            type="text"
            value="test"
          />
          <div
            class="styles__q3q8042 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <svg
              class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_danger__vbm0wqb styles_size_small__vbm0wqg styles_undefined_compound_36__vbm0wq1k"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_danger__m4c9owc style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_8__m4c9ow1n"
      >
        success
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textInput > should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23"
        for="_r_g_"
      >
        Test
      </label>
      <div>
        <div
          class="styles__q3q8048 styles_large__q3q8045"
          data-disabled="false"
          data-error="false"
          data-has-focus="false"
          data-readonly="false"
          data-success="true"
        >
          <input
            aria-invalid="false"
            class="styles__q3q8049"
            data-size="large"
            id="_r_g_"
            type="text"
            value="test"
          />
          <div
            class="styles__q3q8042 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
          >
            <svg
              class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_success__vbm0wqa styles_size_small__vbm0wqg styles_undefined_compound_35__vbm0wq1j"
              viewBox="0 0 16 16"
            >
              <path
                clip-rule="evenodd"
                d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM11.8435 6.20859C12.0967 5.88082 12.0363 5.40981 11.7086 5.15654C11.3808 4.90327 10.9098 4.96365 10.6565 5.29141L6.95615 10.0801L5.30747 8.24828C5.03038 7.94039 4.55616 7.91543 4.24828 8.19253C3.94039 8.46962 3.91544 8.94384 4.19253 9.25172L6.44253 11.7517C6.59132 11.917 6.80582 12.0078 7.02809 11.9995C7.25036 11.9911 7.45746 11.8846 7.59346 11.7086L11.8435 6.20859Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_success__m4c9owh style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_16__m4c9ow1v"
      >
        success
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textInput > should render correctly when input is disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23"
        for="_r_a_"
      >
        Test
      </label>
      <div>
        <div
          class="styles__q3q8048 styles_large__q3q8045"
          data-disabled="true"
          data-error="false"
          data-has-focus="false"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="styles__q3q8049"
            data-size="large"
            disabled=""
            id="_r_a_"
            type="text"
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textInput > should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23"
        for="_r_d_"
      >
        Test
      </label>
      <div>
        <div
          class="styles__q3q8048 styles_large__q3q8045"
          data-disabled="false"
          data-error="false"
          data-has-focus="false"
          data-readonly="true"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="styles__q3q8049"
            data-size="large"
            id="_r_d_"
            readonly=""
            type="text"
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`textInput > should render correctly with basic props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow23"
        for="_r_0_"
      >
        Test
      </label>
      <div>
        <div
          class="styles__q3q8048 styles_large__q3q8045"
          data-disabled="false"
          data-error="false"
          data-has-focus="false"
          data-readonly="false"
          data-success="false"
        >
          <input
            aria-invalid="false"
            class="styles__q3q8049"
            data-size="large"
            id="_r_0_"
            type="text"
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
